# image_processor

./: CMakeLists.txt  README.md  image_processor.cpp
Filters/: filter.cpp  filter.h
Image/: Color.cpp  Color.h  Image.cpp
Parsing/: parse.cpp  parse.h
Reading_and_writing/: Reader.cpp  Reader.h  Write.cpp  Writer.h
test_script/: test_image_processor.py
